# patchbay

./: .gitignore  .gitmodules  AGENTS.md  AGENT_INSTRUCTIONS.md  IDEAS.md  Justfile  TODO.md
design/: api.md  architecture.md  cli.md  data-model.md  patchbay.md  ui.md  workflows.md
dev-bin/: patchbay
patchbay-api-client/: Cargo.toml
patchbay-api-client/src/: lib.rs
patchbay-cli/: Cargo.toml
patchbay-cli/src/: main.rs
patchbay-server/: Cargo.toml
patchbay-server/src/: lib.rs  main.rs  tracing_init.rs
patchbay-server/src/backend/: active_claims.rs  agent_ids.rs  agent_tools.rs  api.rs  app_state.rs  automation.rs  automation_controller.rs  automation_triggers.rs  claim_returns.rs  claim_selection.rs  codex_app_server.rs  comments.rs  crudkit_resources.rs  events.rs  http.rs  item_claims.rs  item_label_service.rs  item_labels.rs  items.rs  migrations.rs  mod.rs  page_data.rs  personalities.rs  process_sessions.rs  projects.rs  relationships.rs  server.rs  storage.rs  swim_lanes.rs  ui.rs  work_item_comments.rs  work_item_labels.rs  work_item_updates.rs  work_items.rs  workflow_labels.rs  workspace.rs
patchbay-server/src/backend/entities/: agent_run.rs  agent_tool.rs  automation_trigger.rs  comment.rs  mod.rs  personality.rs  project.rs  swim_lane.rs  work_item.rs  work_item_event.rs
patchbay-server/src/backend/item_claims/: active_claims.rs  claim_returns.rs  claiming.rs  mod.rs  progress_finish.rs  stale_recovery.rs  tests.rs
patchbay-server/src/frontend/: app.rs  live_events.rs  mod.rs  rich_text.rs  routes.rs  types.rs
patchbay-server/src/frontend/crudkit/: agent_tools.rs  automation_triggers.rs  mod.rs  personalities.rs  projects.rs  swim_lane_filter.rs  swim_lanes.rs  work_item_states.rs  work_items.rs
patchbay-server/src/shared/: view_models.rs
patchbay-server/style/: main.scss
patchbay-server/style/app/layout/: layout.scss  reset.scss
patchbay-server/style/app/pages/: patchbay.scss
patchbay-server/tests/: browser_test.rs
patchbay-types/: Cargo.toml
patchbay-types/src/: lib.rs
