[package]
name = "patchbay-api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
patchbay-types = { path = "../patchbay-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
